# routes/index.js
@@ -3,8 +3,8 @@ const router = express.Router();
 
 const usersController= require('../controllers/users');
 
-router.get('/users',usersController.getAll);
-router.get('/users/:id' ,usersController.getSingle);
+router.get('/countries',usersController.getAll);
+router.get('/countries/:id' ,usersController.getSingle);
 router.post('/newdata' ,usersController.newData);
 router.put('/updatedata/:id' ,usersController.updateData);
 router.delete('/deletedata/:id' ,usersController.deleteData);
